--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,9 +5,10 @@
     <string name="send">发送</string>
     <string name="not_connected">你没有链接一个设备</string>
     <string name="bt_not_enabled_leaving">蓝牙不可用，离开聊天室</string>
+    <string name="title_not_connected">链接中...</string>
     <string name="title_connecting">链接中...</string>
     <string name="title_connected_to">连接到：</string>
-    <string name="title_not_connected">无链接</string>
+    <string name="text_missing">找不到待链接设备</string>
     <string name="scanning">蓝牙设备搜索中...</string>
     <string name="select_device">选择一个好友链接</string>
     <string name="none_paired">没有配对好友</string>
@@ -21,6 +22,12 @@
     <string name="startVideo">开始聊天</string>
     <string name="stopVideo">结束聊天</string>
 
-    <string name="mac_1">20:F4:78:04:C2:E5</string><!--k20 pro-->
-    <string name="mac_2">50:8F:4C:E4:48:9C</string><!--mi6-->
+<!--    <string name="mac_1">20:F4:78:04:C2:E4</string>&lt;!&ndash;k20 pro&ndash;&gt;-->
+<!--    <string name="mac_2">50:8F:4C:E4:48:9B</string>&lt;!&ndash;mi6&ndash;&gt;-->
+
+    <string name="mac_1">04:D3:B5:42:BA:26</string>
+    <string name="mac_2">E0:40:07:B6:E5:6C</string>
+
+    <string name="text_not_found">链接不到设备</string>
+    <string name="text_break">设备链接中断</string>
 </resources>
